$Id: History,v 1.4 2000-04-12 13:03:11 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/modeling
---------------------------------------

vis-V01-01-01  12th April 2000  John Allison
- Made G4PhysicalVolumeModel::DescribeSolid virtual.
- G4PhysicalVolumeModel::DescribeSolid no longer deals with composite
  solids - now programmed into CompositeSolid::CreatePolyhedron, where
  CompositeSolid means G4IntersectionSolid, G4SubtractionSolid and
  G4UnionSolid.
- G4PhysicalVolumeModel::DescribeSolid no longer deals with displaced
  solids - now programmed into G4DisplacedSolid::CreatePolyhedron.
- Added G4LogicalVolumeModel::DescribeSolid, which explicitly adds
  components of composite solids as white forced-wireframe objects.

vis-V00-01-10  25th November 1999  John Allison
- Adapted header files of modeling for Software Reference Manual.

vis-01-00-05  7th February 1999  John Allison

vis-01-00-05  7th February 1999  John Allison
- Added list facility to G4PhysicalVolumeSearchScene.
- Added virtual functions AddThis (const G4Polycone and G4Polyhedra to
  G4BoundingSphereScene and G4PhysicalVolumeSearchScene.

vis-00-04-01  25th November 1998  John Allison.