@@ -1,0 +1,21 @@
+// This code implementation is the intellectual property of
+// the GEANT4 collaboration.
+//
+// By copying, distributing or modifying the Program (or any work
+// based on the Program) you indicate your acceptance of this statement,
+// and all its terms.
+//
+// $Id: G4VTreeGraphicsScene.icc,v 1.1 2000-05-22 07:39:32 johna Exp $
+// GEANT4 tag $Name: not supported by cvs2svn $
+//
+// 
+// John Allison  18th May 2000
+// An artificial graphics scene to find dump geometry hierarchy.
+
+inline void G4VTreeGraphicsScene::PreAddThis
+(const G4Transform3D& objectTransformation,
+ const G4VisAttributes&) {
+  fpCurrentObjectTransformation = &objectTransformation;
+}
+
+inline void G4VTreeGraphicsScene::PostAddThis () {}
